submitted version to freeCodeCamp + addl style
added:
 
li {
    padding-bottom: 1rem;
 }

to improve list item spacing

--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,10 @@ a:hover {
     background-color: lightblue;
 }
 
+ li {
+    padding-bottom: 1rem;
+ }
+
 @media (max-width: 600px) {
     
     nav {
